--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -36,9 +36,12 @@
 </p>
 
 <p>
-	<%= image_tag(@product.image, size: 200, class: "img-responsive") %>
-	
+	<%= image_tag(@product.image, size: 200, class: "img-responsive") %>	
 </p>
 
+<!-- <%# if current_user.admin? %> -->
+<% if can? :update, @product %>
 <%= link_to 'Edit', edit_product_path(@product) %> |
 <%= link_to 'Back', products_path %>
+
+<% end %>
