--- a/app/views/storefront/_products_partial.html.erb
+++ b/app/views/storefront/_products_partial.html.erb
@@ -1,8 +1,4 @@
-<h3>Welcome to Tech Talent Store</h3>
-<p>All of our <%= @category.name %></p>
-
-<%= render 'products_partial'%>
-<!-- <div class="row">
+<div class="row">
 	<% @products.each do |product| %>
 		<div class="col-sm-6 col-md-4">
 			<div class="well text-center">
@@ -18,7 +14,7 @@
 				</p>
 			</div>
 		</div>
-			
+			<!-- Modal -->
 			<div class="modal fade" id="myModal_<%= product.id %>" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
 			  <div class="modal-dialog" role="document">
 			    <div class="modal-content">
@@ -37,11 +33,26 @@
 			        <p>Category: <%= product.category.name %></p>
 			        <p>Description: <%= product.description %></p>
 			      </div>
-			      <div class="modal-footer">
-			        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+			      <div class="modal-footer">					  
+					 <div style="display: inline-block;">
+						 <%= form_tag add_to_cart_path, method: :post do %>
+						 
+						 <%= hidden_field_tag :product_id, product.id %>
+						 <%= number_field_tag :quantity, nil, min: 1, placeholder: " How many?", class: "form-control", style: "width: 120px; display: inline-block;" %>
+						 
+						 <%= submit_tag "Add to Cart", class: "btn btn-primary", style: "display: inline-block" %>
+						 <%end%>
+					 </div>
+						 
+					  <div style="display:inline-block;">
+					  
+					  
+			        	  <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+					  </div>
+				  	</div>
 			      </div>
 			    </div>
 			  </div>
-			</div>
+					
 	<% end %>
-</div> -->
+</div>
