--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,21 @@
   </head>
 
   <body>
+	<%= render 'layouts/navbar' %>
+	
+	
+	<div id="flash">
+	
+	  <% flash.each do |type, message| %>
+		<div class="alert <%= bootstrap_class_for(type) %> fade-in">
+			<button class="close" data-dismiss="alert"></button>
+			<%= message %>
+		</div>
+	  <%end%>
+	</div>
+	
+	
+	
 	<div class="container">
    	   <%= yield %>
 	</div>
